<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_1"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_2"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num2_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_3"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num3_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/num4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_4"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num4_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_5"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num5_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_6"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num6_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/num7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_7"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num7_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_8"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num8_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_9"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="top|center_vertical|center_horizontal|center"
                android:text="@string/num9_text"
                android:textColor="@color/md_grey_800"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/my_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/ic_call_add"
                app:tint="@color/md_grey_800" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_vertical|center_horizontal|center"
                android:text="@string/key_0"
                android:textColor="@color/md_grey_800"
                android:textSize="38sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/backspace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/num_pad_key_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_backspace"
                app:tint="@color/md_grey_800" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>